[gd_scene load_steps=16 format=3 uid="uid://bfh8txg0uot2h"]

[ext_resource type="Script" path="res://Scene_Switcher/enemy/Boss/Boss.gd" id="1_t6j00"]
[ext_resource type="Texture2D" uid="uid://tuxc8wfamlkw" path="res://Scene_Switcher/enemy/Boss/asset/robot_boss_body.png" id="1_v8dj8"]
[ext_resource type="PackedScene" uid="uid://c25takgk0e4pj" path="res://Scene_Switcher/ammo/bombshell.tscn" id="2_8vxou"]
[ext_resource type="Texture2D" uid="uid://c65pxbu8rgk4k" path="res://Scene_Switcher/enemy/Boss/asset/robot_boss_left_arm.png" id="2_52qsb"]
[ext_resource type="PackedScene" uid="uid://dtmxucs7fce2b" path="res://Scene_Switcher/ammo/missile.tscn" id="2_k8lls"]
[ext_resource type="Texture2D" uid="uid://bbri5gv872l8t" path="res://Scene_Switcher/enemy/Boss/asset/robot_boss_right_arm.png" id="3_61r5x"]
[ext_resource type="Texture2D" uid="uid://c8qa45bgvehb1" path="res://Scene_Switcher/enemy/asset/vortex.png" id="4_k7ia8"]
[ext_resource type="Texture2D" uid="uid://drhqwrt536g3m" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="4_um5v4"]
[ext_resource type="Texture2D" uid="uid://do07g4xp73tlo" path="res://Scene_Switcher/enemy/Boss/asset/robot_boss_dead.png" id="9_rteuv"]

[sub_resource type="Gradient" id="Gradient_ve0a3"]
offsets = PackedFloat32Array(0.162577, 0.831288, 0.990798)
colors = PackedColorArray(1, 0.607843, 0, 1, 0.526793, 5.72633e-07, 1.06417e-07, 0.560784, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_avksq"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_l80q7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_Sprite/Weapon_Sprite/fire_sparkles:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_Sprite/Weapon_Sprite/fire_sparkles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body_Sprite/Missile_Sprite/fire_sparkles:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body_Sprite/Missile_Sprite/fire_sparkles:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_li4dr"]
resource_name = "fire_basis"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_Sprite/Weapon_Sprite/fire_sparkles:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_Sprite/Weapon_Sprite/fire_sparkles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oox20"]
resource_name = "fire_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_Sprite/Missile_Sprite/fire_sparkles:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_Sprite/Missile_Sprite/fire_sparkles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6gbkl"]
_data = {
"RESET": SubResource("Animation_l80q7"),
"fire_basis": SubResource("Animation_li4dr"),
"fire_right": SubResource("Animation_oox20")
}

[node name="Boss" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 31
script = ExtResource("1_t6j00")
missile_scene = ExtResource("2_k8lls")
life_max = 100.0
bullet_cooldown = 1.0
ammo_scene = ExtResource("2_8vxou")

[node name="Body_Sprite" type="Sprite2D" parent="."]
self_modulate = Color(0.72549, 0, 0, 1)
scale = Vector2(2.0531, 2.0531)
texture = ExtResource("1_v8dj8")
offset = Vector2(10.2727, 30.8182)

[node name="Weapon_Sprite" type="Sprite2D" parent="Body_Sprite"]
self_modulate = Color(0.72549, 0, 0, 1)
position = Vector2(-106.668, -7.7931)
texture = ExtResource("2_52qsb")

[node name="fire_sparkles" type="Sprite2D" parent="Body_Sprite/Weapon_Sprite"]
position = Vector2(-1.19209e-07, 159.759)
texture = ExtResource("4_um5v4")
flip_v = true
vframes = 3
frame = 2

[node name="target" type="Marker2D" parent="Body_Sprite/Weapon_Sprite"]
position = Vector2(9.53674e-07, 140.276)

[node name="RayCast2D" type="RayCast2D" parent="Body_Sprite/Weapon_Sprite"]
position = Vector2(0, 140)
target_position = Vector2(0, 140)

[node name="Missile_Sprite" type="Sprite2D" parent="Body_Sprite"]
self_modulate = Color(0.72549, 0, 0, 1)
position = Vector2(118.889, -4.25078)
texture = ExtResource("3_61r5x")

[node name="fire_sparkles" type="Sprite2D" parent="Body_Sprite/Missile_Sprite"]
position = Vector2(4.82642, 136.734)
texture = ExtResource("4_um5v4")
flip_v = true
vframes = 3
frame = 2

[node name="target" type="Marker2D" parent="Body_Sprite/Missile_Sprite"]
position = Vector2(5.80055, 144.527)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(44, 0)
polygon = PackedVector2Array(-292, 248, -236, 256, -212, 80, -164, 80, -148, 144, 68, 136, 76, 80, 132, 72, 164, 232, 260, 224, 284, -96, 4, -96, -300, -88)

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-50, 2.08165e-12)
collision_mask = 20

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(50, 2.08165e-12)
collision_mask = 20

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 1)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 1)

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 1.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 14.47
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 18.96
initial_velocity_max = 142.18
angular_velocity_max = 354.88
color_ramp = SubResource("Gradient_ve0a3")

[node name="Smokes" type="Node2D" parent="."]

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-152, -48)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_avksq")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(160, -48)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_avksq")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-88, 48)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_avksq")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(80, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_avksq")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_k7ia8")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_avksq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6gbkl")
}

[node name="Dead_Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_rteuv")
